--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "dev2": "vite --port 3001",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -14,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
+    "@mui/x-data-grid": "^5.11.1",
     "axios": "^0.26.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.2",
