--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
 	"license": "ISC",
 	"dependencies": {
 		"@azure/msal": "^1.4.5",
-		"@azure/msal-node": "^1.1.0",
+		"@azure/msal-node": "^3.4.1",
+		"@bitwarden/sdk-napi": "^1.0.0",
+		"@bitwarden/sdk-wasm": "^0.1.0",
 		"@ffmpeg-installer/ffmpeg": "^1.0.20",
 		"@google-cloud/compute": "^2.4.1",
 		"@google-cloud/pubsub": "^2.7.0",
