--- a/server/package.json
+++ b/server/package.json
@@ -54,8 +54,14 @@
 		"pm2": "^4.5.0",
 		"sha1": "^1.1.1",
 		"stripe": "^8.12.0",
-		"transloadit": "^2.0.10",
+		"transloadit": "^3.0.2",
 		"twilio": "^3.39.3",
 		"uuidv4": "^6.0.2"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
+		"@types/express": "^5.0.1",
+		"@types/formidable": "^3.4.5",
+		"@types/jsonwebtoken": "^9.0.9"
 	}
 }
