--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon monitor.js",
     "build": "npm run build",
     "ngrok": "node devApp.js",
-    "server": "tsx server.ts",
+    "server": "tsx watch server.ts",
     "client": "npm start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run server\" \"npm run client\""
@@ -55,6 +55,7 @@
     "sha1": "^1.1.1",
     "stripe": "^8.12.0",
     "transloadit": "^3.0.2",
+    "tsc-watch": "^6.2.1",
     "twilio": "^5.5.1",
     "uuidv4": "^6.0.2"
   },
@@ -65,6 +66,7 @@
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.9",
     "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3"
   }
 }
