--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
     "@mui/x-data-grid": "^5.11.1",
+    "@stripe/stripe-js": "^7.0.0",
     "@uppy/core": "^4.4.3",
     "@uppy/dashboard": "^4.3.2",
     "@uppy/drag-drop": "^4.1.1",
