--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "@google-cloud/compute": "^2.4.1",
     "@google-cloud/pubsub": "^2.7.0",
+    "@google-cloud/secret-manager": "^6.0.1",
     "@google-cloud/storage": "^4.7.0",
     "@google-cloud/tasks": "^2.1.3",
     "@microsoft/microsoft-graph-client": "^2.2.1",
